--- a/LQ库改写/vs/LQ_RT1052LCD.vcxproj
+++ b/LQ库改写/vs/LQ_RT1052LCD.vcxproj
@@ -71,6 +71,8 @@
     </ClCompile>
     <ClCompile Include="..\LQuserFlies\src\LQ_SGP18T.c">
     </ClCompile>
+    <ClCompile Include="..\LQuserFlies\src\PigMT9V032.c">
+    </ClCompile>
     <ClCompile Include="..\LQuserFlies\src\SEEKFREE_MT9V032.c">
     </ClCompile>
     <ClCompile Include="..\LQuserFlies\src\Pig_edma.c">
@@ -231,6 +233,8 @@
     </ClInclude>
     <ClInclude Include="..\LQuserFlies\src\LQ_SGP18T.h">
     </ClInclude>
+    <ClInclude Include="..\LQuserFlies\src\PigMT9V032.h">
+    </ClInclude>
     <ClInclude Include="..\LQuserFlies\src\SEEKFREE_MT9V032.h">
     </ClInclude>
     <ClInclude Include="..\LQuserFlies\src\Pig_edma.h">
@@ -331,7 +335,7 @@
     </None>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{9D477A1F-C182-4171-59CB-359E187EE362}</ProjectGuid>
+    <ProjectGuid>{D6FB1043-9EDA-438D-5DA8-7EF221CCB6C4}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>LQ_RT1052LCD</RootNamespace>
   </PropertyGroup>
